--- a/index.html
+++ b/index.html
@@ -6,18 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gautham Sivanantham</title>
 </head>
-<body>
-  <h1>Gautham Sivanantham</h1>
 
-  <dl>
-    <dt>Student Number</dt>
-    <dd>40958695</dd>
-    <dt>Program</dt>
-    <dd>Interactive Media Design</dd>
-    <dt>Course</dt>
-    <dd>MTM6201 – Web Development 2</dd>
-    <dt>Interesting Fact</dt>
-    <dd>I used to hold a top 100 time in Baku on F124</dd>
-  </dl>
+<body>
+
+  <h1>The Meaning of Emojis</h1>
+
+  <section class="cards">
+
+    <article class="emoji">
+      <div class="icon">😊</div>
+      <h2>Smiling Face with Smiling Eyes</h2>
+      <p>A yellow face with smiling eyes and a broad, closed smile turning up to rosy cheeks. Often expresses genuine happiness and warm, positive feelings.</p>
+      <a href="#">Read More about this emoji</a>
+    </article>
+
+    <article class="emoji">
+      <div class="icon">🍻</div>
+      <h2>Clinking Beer Mugs</h2>
+      <p>Two frosty mugs of beer with frothy heads being clinked together, as done at a celebratory or convivial toast (“Cheers!”). Several platforms include stylized lines to mark the clinking.</p>
+      <a href="#">Read More about this emoji</a>
+    </article>
+
+    <article class="emoji">
+      <div class="icon">😂</div>
+      <h2>Face with Tears of Joy</h2>
+      <p>A yellow face with a big grin, uplifted eyebrows, and smiling eyes, each shedding a tear from laughing so hard. Widely used to show something is funny or pleasing. Named the Oxford Dictionaries 2015 Word of the Year, and the most used emoji on all platforms from 2011–2021.</p>
+      <a href="#">Read More about this emoji</a>
+    </article>
+
+    <article class="emoji">
+      <div class="icon">🌱</div>
+      <h2>Seedling</h2>
+      <p>A seedling, or a young plant, as a newly sprouted tree. Depicted as a tiny, light-green plant with a short stem and two leaves. Often shown freshly sprung from a small mound of brown earth.</p>
+      <a href="#">Read More about this emoji</a>
+    </article>
+
+  </section>
+
 </body>
 </html>
